# openenv-data-cleaning

./: Dockerfile  README.md  environment.py  grader.py  inference.py  openenv.yaml  pyproject.toml
env/: environment.py  grader.py  models.py  tasks.py
server/: app.py
